--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+    "export": "next export",
+    "deploy": "npm run build && npm run export",
+    "start": "next start"
+},
   "dependencies": {
     "next": "12.3.1",
     "react": "18.2.0",
