--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
-    "export": "next export",
-    "deploy": "npm run build && npm run export",
-    "start": "next start"
-},
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "next": "12.3.1",
     "react": "18.2.0",
